--- a/src/scss/module/_header.scss
+++ b/src/scss/module/_header.scss
@@ -7,7 +7,7 @@
   &__inner {
     width: 100%;
     height: 100%;
-    color: white;
+    color: red;
     font-size: 24px;
     font-weight: bold;
   }
