--- a/public_html/assets/css/style.css
+++ b/public_html/assets/css/style.css
@@ -1,3 +1,118 @@
+@charset "UTF-8";
+
+/*----------------------------
+汎用: リセットCSS
+----------------------------*/
+
+*,
+*::before,
+*::after {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  /* 全ての要素についてpaddingとborderを幅と高さに含める */
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+  /* 親要素から引き継ぐ */
+}
+
+ol,
+ul,
+li {
+  list-style: none;
+}
+
+body,
+div,
+dl,
+dt,
+dd,
+ul,
+ol,
+li,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+pre,
+code,
+form,
+fieldset,
+legend,
+input,
+textarea,
+p,
+blockquote,
+th,
+td {
+  margin: 0;
+  padding: 0;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-size: 100%;
+  font-weight: normal;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+  width: 100%;
+}
+
+fieldset,
+img {
+  border: 0;
+}
+
+img {
+  width: 100%;
+  height: auto;
+  border: 0;
+  vertical-align: bottom;
+}
+
+button {
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  padding: 0;
+  border: 0;
+  border-radius: 0;
+  background-color: transparent;
+  cursor: pointer;
+}
+
+input,
+textarea,
+select {
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  border: none;
+  border-radius: 0;
+  background-color: inherit;
+  color: inherit;
+  font-size: 100%;
+  font-weight: inherit;
+  font-family: inherit;
+}
+
+textarea {
+  resize: none;
+  /* リサイズ不可 */
+  display: block;
+}
+
 html {
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
@@ -9,22 +124,127 @@ html {
 
 * {
   font-family: "Noto Sans JP", sans-serif;
-  color: #29394E;
+  color: #333333;
   letter-spacing: 0;
+}
+
+.slider {
+  width: 100%;
+  height: 100%;
+}
+
+.slider .swiper-area {
+  position: relative;
+}
+
+.slider .swiper-slide {
+  width: 100%;
+  height: 585px;
+}
+
+.slider .swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.slider .swiper-pagination--custom {
+  width: 100%;
+  margin: 10px auto;
+}
+
+.slider .swiper-pagination--custom .swiper-pagination-bullet {
+  background-color: #f45f5f;
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  opacity: 0.6;
+}
+
+.slider .swiper-pagination--custom .swiper-pagination-bullet-active {
+  opacity: 1;
+}
+
+.slider .swiper-button-next {
+  width: 25px;
+  height: 25px;
+}
+
+.slider .swiper-button-next img {
+  width: 100%;
+  height: 100%;
+}
+
+.slider .swiper-button-next::after {
+  display: none;
+}
+
+.swiper-pagination--custom .swiper-pagination-bullet {
+  width: 40px;
+  height: 5px;
+  border-radius: 0;
 }
 
 .header {
   width: 100%;
-  min-height: 100px;
-  background-color: #79A92D;
+  height: 100%;
 }
 
 .header__inner {
-  width: 100%;
-  height: 100%;
-  color: #333;
-  font-size: 24px;
-  font-weight: bold;
+  max-width: 343px;
+  margin: 8px auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.header__inner__logo img {
+  width: 20.112vw;
+  height: 17.264vw;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.header__inner__hamburger--line {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.header__inner__hamburger--line::before {
+  content: "";
+  display: block;
+  width: 8px;
+  height: 8px;
+  background-color: #f45f5f;
+  border-radius: 50%;
+}
+
+.header__inner__hamburger--line::after {
+  content: "";
+  display: block;
+  width: 42px;
+  height: 4px;
+  background-color: #f45f5f;
+  margin-left: 8px;
+}
+
+.header__inner__hamburger--line:last-child {
+  margin-top: 7px;
 }
 
 @media screen and (max-width: 1366px) {
