--- a/src/scss/global/_color.scss
+++ b/src/scss/global/_color.scss
@@ -1,3 +1,4 @@
-$primary-color:#79A92D;
-$secondary-color:#29394E;
-$txt-color:#29394E;
+$primary-color: #f45f5f;
+$secondary-color: #fcfcfc;
+$tertiary-color: #cecdcd;
+$txt-color: #333333;
