--- a/src/scss/global/_function.scss
+++ b/src/scss/global/_function.scss
@@ -1,8 +1,8 @@
 @use "sass:math";
 
 @function strip-unit($number) {
-  @if type-of($number) == 'number' and not unitless($number) {
-    @return math.div($number,($number * 0 + 1));
+  @if type-of($number) == "number" and not unitless($number) {
+    @return math.div($number, ($number * 0 + 1));
   }
 
   @return $number;
@@ -11,7 +11,10 @@
 @function vw($window_width, $size) {
   @return math.div($size, $window_width) * 100vw;
 }
+@function vh($window_height, $size) {
+  @return math.div($size, $window_height) * 100vw;
+}
 
 @function rem($px) {
-  @return math.div($px,16) * 1rem;
+  @return math.div($px, 16) * 1rem;
 }
