--- a/src/scss/module/_header.scss
+++ b/src/scss/module/_header.scss
@@ -1,14 +1,49 @@
 @use "global" as *;
 
+// ヘッダー
 .header {
   width: 100%;
-  min-height: 100px;
-  background-color: $primary-color;
+  height: 100%;
+
   &__inner {
-    width: 100%;
-    height: 100%;
-    color: red;
-    font-size: 24px;
-    font-weight: bold;
+    max-width: $sp-cont;
+    margin: 8px auto;
+
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    &__logo {
+      img {
+        width: vw(strip-unit($sp), 75.42);
+        height: vh(strip-unit($sp), 64.74);
+        object-fit: cover;
+      }
+    }
+    &__hamburger {
+      &--line {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        &::before {
+          content: "";
+          display: block;
+          width: 8px;
+          height: 8px;
+          background-color: $primary-color;
+          border-radius: 50%;
+        }
+        &::after {
+          content: "";
+          display: block;
+          width: 42px;
+          height: 4px;
+          background-color: $primary-color;
+          margin-left: 8px;
+        }
+        &:last-child {
+          margin-top: 7px;
+        }
+      }
+    }
   }
 }
