--- a/src/scss/module/_header.scss
+++ b/src/scss/module/_header.scss
@@ -6,9 +6,11 @@
   height: 100%;
 
   &__inner {
-    max-width: $sp-cont;
-    margin: 8px auto;
-
+    @media screen and (min-width: $tab) {
+      display: none;
+    }
+    max-width: vw(strip-unit($sp), 343);
+    margin: rem(8) auto;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -19,31 +21,156 @@
         object-fit: cover;
       }
     }
+
     &__hamburger {
+      z-index: 999;
+      transition: transform 0.4s, rotate 0.6s;
+      position: relative;
+      width: vw(strip-unit($sp), 60);
+      height: vh(strip-unit($sp), 23);
+      &.is-active {
+        width: vw(strip-unit($sp), 60);
+        height: vh(strip-unit($sp), 23);
+        transform: rotate(90deg);
+        & span:nth-of-type(1) {
+          transform: rotate(66deg);
+          &::after {
+            background-color: $secondary-color;
+          }
+          &::before {
+            transform: translate(rem(14), rem(10));
+            background-color: $secondary-color;
+          }
+        }
+        & span:nth-of-type(2) {
+          transform: rotate(-66deg);
+          &::after {
+            background-color: $secondary-color;
+          }
+          &::before {
+            background-color: $secondary-color;
+            transform: translate(rem(15), rem(-10));
+          }
+        }
+      }
+
       &--line {
+        position: absolute;
+        display: block;
         display: flex;
         align-items: center;
         justify-content: center;
         &::before {
           content: "";
           display: block;
-          width: 8px;
-          height: 8px;
+          width: rem(8);
+          height: rem(8);
           background-color: $primary-color;
           border-radius: 50%;
+          margin-right: rem(8);
         }
         &::after {
           content: "";
           display: block;
-          width: 42px;
-          height: 4px;
+          width: rem(42);
+          height: rem(4);
           background-color: $primary-color;
-          margin-left: 8px;
         }
         &:last-child {
-          margin-top: 7px;
+          bottom: 0;
         }
       }
     }
+  }
+
+  &__nav {
+    z-index: 998;
+    opacity: 0;
+    visibility: hidden;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: $primary-color;
+    transition: 1s;
+    overflow: scroll;
+    &__logo {
+      width: vw(strip-unit($sp), 92.07);
+      height: vh(strip-unit($sp), 76.31);
+      margin-top: rem(18.19);
+      margin-left: auto;
+      margin-right: 0;
+      img {
+        width: 100%;
+        height: 100%;
+      }
+    }
+
+    &.is-active {
+      transition: 1s;
+      opacity: 1;
+      visibility: visible;
+      width: 100%;
+      height: 100vh;
+    }
+
+    &__ul {
+      width: vw(strip-unit($sp), 343);
+      margin: auto;
+
+      &__li {
+        position: relative;
+        display: block;
+        color: $secondary-color;
+        font-weight: 700;
+        font-size: rem(24);
+        line-height: rem(49);
+        letter-spacing: rem(2.4);
+        &::before {
+          content: "";
+          display: inline-block;
+          position: relative;
+          top: rem(-4);
+          width: rem(8);
+          height: rem(8);
+          background-color: $secondary-color;
+          border-radius: 50%;
+          padding-left: rem(8);
+          margin-right: rem(8);
+        }
+        &::after {
+          content: "";
+          display: block;
+          width: 100%;
+          height: rem(1);
+          background-color: $secondary-color;
+          position: absolute;
+          bottom: -10px;
+          opacity: 0;
+          visibility: hidden;
+        }
+        &.is-active::after {
+          bottom: 0;
+          opacity: 1;
+          visibility: visible;
+          transition: 1.5s;
+        }
+      }
+    }
+  }
+}
+.header__nav__ul__li:first-child {
+  margin-top: rem(42);
+}
+
+.header__nav__ul__li + .header__nav__ul__li {
+  margin-top: rem(23);
+}
+
+.header__pc--btn {
+  display: none;
+  @media screen and (min-width: $tab) {
+    display: flex;
+    justify-content: flex-end;
   }
 }
