--- a/src/scss/module/_top.scss
+++ b/src/scss/module/_top.scss
@@ -1,14 +1,50 @@
+@use "global" as *;
+
 .slider {
   width: 100%;
   height: 100%;
+  aspect-ratio: 375/ 652;
+  position: relative;
   .swiper-area {
     position: relative;
   }
-  .swiper-slide {
-    width: 100%;
-    height: 585px;
+  .swiper {
+    position: relative;
+    &__text-wrapper {
+      z-index: 10;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      display: flex;
+      justify-content: space-between;
+      flex-direction: column;
+    }
+    &__text--1,
+    &__text--2,
+    &__text--3 {
+      color: $primary-color;
+      font-weight: 700;
+      font-size: rem(100);
+      line-height: rem(145);
+      text-align: right;
+      padding-right: rem(15);
+    }
+    .swiper__copyright {
+      z-index: 10;
+      position: absolute;
+      font-weight: 400;
+      font-size: rem(13);
+      line-height: rem(18);
+      bottom: rem(28);
+      left: rem(8);
+      writing-mode: vertical-rl;
+    }
   }
-
+  .swiper-slide {
+    height: 100%;
+  }
   .swiper-slide img {
     display: block;
     width: 100%;
@@ -16,24 +52,17 @@
     object-fit: cover;
   }
   .swiper-pagination--custom {
-    width: 100%;
-    margin: 10px auto;
-
-    .swiper-pagination-bullet {
-      background-color: #f45f5f;
-      width: 10px;
-      height: 10px;
-      border-radius: 50%;
-      opacity: 0.6;
-    }
-    .swiper-pagination-bullet-active {
-      opacity: 1;
-    }
+    width: fit-content;
+    margin: rem(10) auto;
   }
-
-  .swiper-button-next {
-    width: 25px;
-    height: 25px;
+  .swiper-top-button-next {
+    z-index: 15;
+    position: absolute;
+    width: rem(25);
+    height: rem(25);
+    left: rem(4);
+    bottom: rem(40);
+    transform: translateY(-50%);
     img {
       width: 100%;
       height: 100%;
@@ -46,8 +75,13 @@
 
 .swiper-pagination--custom {
   .swiper-pagination-bullet {
-    width: 40px;
-    height: 5px;
-    border-radius: 0;
+    width: rem(10);
+    height: rem(10);
+    border-radius: 50%;
+    background-color: $primary-color;
+    opacity: 0.6;
+  }
+  .swiper-pagination-bullet-active {
+    opacity: 1;
   }
 }
