--- a/src/scss/module/_header.scss
+++ b/src/scss/module/_header.scss
@@ -1,4 +1,4 @@
-@use "global" as *;
+@use "global"as *;
 
 // ヘッダー
 .header {
@@ -9,11 +9,13 @@
     @media screen and (min-width: $tab) {
       display: none;
     }
+
     max-width: vw(strip-unit($sp), 343);
     margin: rem(8) auto;
     display: flex;
     align-items: center;
     justify-content: space-between;
+
     &__logo {
       img {
         width: vw(strip-unit($sp), 75.42);
@@ -28,25 +30,32 @@
       position: relative;
       width: vw(strip-unit($sp), 60);
       height: vh(strip-unit($sp), 23);
+
       &.is-active {
         width: vw(strip-unit($sp), 60);
         height: vh(strip-unit($sp), 23);
         transform: rotate(90deg);
+
         & span:nth-of-type(1) {
           transform: rotate(66deg);
+
           &::after {
             background-color: $secondary-color;
           }
+
           &::before {
             transform: translate(rem(14), rem(10));
             background-color: $secondary-color;
           }
         }
+
         & span:nth-of-type(2) {
           transform: rotate(-66deg);
+
           &::after {
             background-color: $secondary-color;
           }
+
           &::before {
             background-color: $secondary-color;
             transform: translate(rem(15), rem(-10));
@@ -60,22 +69,25 @@
         display: flex;
         align-items: center;
         justify-content: center;
+
         &::before {
           content: "";
           display: block;
-          width: rem(8);
-          height: rem(8);
+          width: vw(strip-unit($sp), 8);
+          height: vh(strip-unit($sp), 8);
           background-color: $primary-color;
           border-radius: 50%;
           margin-right: rem(8);
         }
+
         &::after {
           content: "";
           display: block;
-          width: rem(42);
-          height: rem(4);
+          width: vw(strip-unit($sp), 42);
+          height: vw(strip-unit($sp), 4);
           background-color: $primary-color;
         }
+
         &:last-child {
           bottom: 0;
         }
@@ -90,16 +102,18 @@
     position: absolute;
     top: 0;
     width: 100%;
-    height: 100vh;
+    height: 200vh;
     background-color: $primary-color;
     transition: 1s;
     overflow: scroll;
+
     &__logo {
       width: vw(strip-unit($sp), 92.07);
       height: vh(strip-unit($sp), 76.31);
       margin-top: rem(18.19);
       margin-left: auto;
       margin-right: 0;
+
       img {
         width: 100%;
         height: 100%;
@@ -126,29 +140,32 @@
         font-size: rem(24);
         line-height: rem(49);
         letter-spacing: rem(2.4);
+
         &::before {
           content: "";
           display: inline-block;
           position: relative;
           top: rem(-4);
-          width: rem(8);
-          height: rem(8);
+          width: vw(strip-unit($sp), 8);
+          height: vh(strip-unit($sp), 8);
           background-color: $secondary-color;
           border-radius: 50%;
           padding-left: rem(8);
           margin-right: rem(8);
         }
+
         &::after {
           content: "";
           display: block;
           width: 100%;
-          height: rem(1);
+          height: vh(strip-unit($sp), 1);
           background-color: $secondary-color;
           position: absolute;
           bottom: -10px;
           opacity: 0;
           visibility: hidden;
         }
+
         &.is-active::after {
           bottom: 0;
           opacity: 1;
@@ -159,18 +176,27 @@
     }
   }
 }
+
 .header__nav__ul__li:first-child {
   margin-top: rem(42);
 }
 
-.header__nav__ul__li + .header__nav__ul__li {
+.header__nav__ul__li+.header__nav__ul__li {
   margin-top: rem(23);
 }
 
 .header__pc--btn {
   display: none;
+
   @media screen and (min-width: $tab) {
     display: flex;
     justify-content: flex-end;
+  }
+}
+
+html {
+  &.fixed {
+    height: 100%;
+    overflow: hidden;
   }
 }
