--- a/src/scss/module/_index.scss
+++ b/src/scss/module/_index.scss
@@ -1,4 +1,13 @@
 @use "btn";
+@use "section-title";
 @use "footer";
 @use "top";
+@use "message";
 @use "header";
+@use "business";
+@use "media";
+@use "pickup";
+@use "colorSection";
+@use "info";
+@use "job-info";
+@use "voice";
